<resources>
    <string name="app_name">GodsLove</string>
    <string name="join_class">Join Class</string>
    <string name="add_class">Add Class</string>
    <string name="enter_secret_code">Enter your secret code to have access to your class</string>
    <string name="you_have_not_added_any_class_yet">You have not added any class yet.</string>
    <string name="secret_code_cant_be_empty">Secrete Code cannot be empty!</string>
    <string name="enter_student_name">Enter Student name</string>
    <string name="select_class_for_student">Select Class for student</string>
    <string name="choose_month">Choose Month</string>
    <string name="add_student">Add Student</string>
    <string name="update_Student">Update Student</string>
    <string name="updaate_student_info">Update Student</string>
    <string name="update">Update</string>
    <string name="add_update_students">Add / Update Students</string>
    <string name="view_active_students">View Active Students</string>
    <string name="view_classes">View Classes</string>
    <string name="please_wait">Please wait</string>
    <string name="noting_found">Nothing found</string>



    <!-- Generic -->
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="privacy_policy_title">Privacy Policy</string>

    <!-- Home -->
    <string name="home_recordings_title">Recordings</string>
    <string name="home_more_settings">More settings</string>
    <string name="home_no_recordings_message">No recordings</string>
    <string name="home_fab_record_hint">Start recording</string>
    <string name="action_sort_by_name">Name</string>
    <string name="action_sort_by_date">Date</string>
    <string name="action_sort_by_size">Size</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_order_by">Order by</string>
    <string name="action_ascending">Ascending</string>
    <string name="action_descending">Descending</string>
    <string name="menu_share">@string/share</string>
    <string name="menu_delete">Delete</string>
    <string name="dialog_delete_file_msg">Delete this file?</string>
    <string name="dialog_delete_all_msg">Delete all selected recordings?</string>
    <string name="dialog_title_rename">Insert new name</string>
    <string name="new_file_name_hint">New name</string>
    <string name="recording_thumbnail_description">Thumbnail</string>
    <string name="choose_location_dialog_title">Choose where to save recordings</string>
    <string name="choose_location_action">Select Directory</string>

    <!-- Service -->
    <string name="notification_title">Screen recording</string>
    <string name="notification_summary_recording">Recording</string>
    <string name="notification_action_stop">Stop</string>
    <string name="notification_action_pause">Pause</string>
    <string name="notification_action_resume">Resume</string>
    <string name="notification_action_delete">Delete</string>
    <string name="notification_channel_recording">While recording</string>
    <string name="notification_channel_finish">Recording finished</string>
    <string name="notification_finish_title">Video saved</string>
    <string name="notification_finish_summary">Open the recorded videos</string>
    <string name="recording_error_message">Recording error</string>
    <string name="recording_paused_message">Recording paused</string>

    <!-- Settings -->
    <string name="pref_key_dark_theme" translatable="false">dark_theme</string>
    <string name="pref_key_audio" translatable="false">record_audio</string>
    <string name="pref_key_resolution" translatable="false">video_resolution</string>
    <string name="pref_key_fps" translatable="false">fps</string>
    <string name="pref_key_video_bitrate" translatable="false">video_bitrate</string>
    <string name="pref_key_filename" translatable="false">filename</string>
    <string name="pref_key_file_prefix" translatable="false">file_prefix</string>
    <string name="pref_key_video_encoder" translatable="false">video_encoder</string>
    <string name="pref_key_audio_sampling_rate" translatable="false">audio_sampling_rate</string>
    <string name="pref_key_audio_encoder" translatable="false">audio_encoder</string>
    <string name="pref_key_audio_bit_rate" translatable="false">audio_encoder_bitrate</string>
    <string name="pref_key_orientation" translatable="false">orientation</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_dark_theme_title">Dark theme</string>
    <string name="pref_key_save_location">save_location</string>
    <string name="pref_key_save_location_type">save_location_type</string>
    <string name="pref_save_location_title">Folder</string>
    <string name="reset_save_location">Reset</string>
    <string name="change_save_location">Change</string>

    <string name="pref_category_video">Video</string>
    <string name="pref_video_resolution_title">Resolution</string>
    <string name="pref_video_fps_title">Frames per second</string>
    <string name="pref_video_bitrate_title">Bit rate</string>
    <string name="pref_video_encoder">Encoder</string>

    <string name="pref_category_audio">Audio</string>
    <string name="pref_audio_record_title">Record audio</string>
    <string name="pref_audio_record_summary">Records audio from mic along with screen video</string>
    <string name="pref_audio_sampling_rate">Sampling rate</string>
    <string name="pref_audio_bitrate">Bitrate</string>

    <string name="prefs_category_output">Output</string>
    <string name="pref_filename_format_title">Format</string>
    <string name="pref_filename_prefix_title">Prefix</string>

    <string name="audio_permission_need">Permission to record audio is needed</string>
    <string name="dialog_ask_again">Ask again</string>
    <string name="dialog_open_app_settings">Open settings</string>

    <!-- About -->
    <string name="about_title">@string/about</string>
    <string name="feedback_subject">Screen Kap feedback</string>
    <string name="feedback_chooser_title">Send email…</string>
    <string name="author_email" translatable="false">bashkimidev@gmail.com</string>
    <string name="version">Version %s</string>
    <string name="about_header_help">Help</string>
    <string name="about_send_feedback">Send feedback</string>
    <string name="about_header_legal">Legal</string>
    <string name="licences_title">Licenses</string>
    <string name="about_lib_intro">This app uses the following open source libraries.</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="app_description">This app is open source and is licensed under Apache 2.0.</string>
    <string name="source_code"><u>Source code</u></string>
    <string name="app_source_code" translatable="false">https://github.com/indritbashkimi/ScreenKap</string>
    <string name="open_privacy_policy_website">Open website</string>
    <string name="privacy_policy_website">https://screen-kap.web.app/</string>

    <string name="shortcut_short_label">Toggle</string>
    <string name="shortcut_long_label">Toggle recording</string>
    <string name="shortcut_disabled_message">Toggle disabled</string>
    <string name="menu_rename">Rename</string>
    <string name="recorder">Godslove Recorder</string>
</resources>
