<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/add_updateLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/add_update_students"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/add_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:prompt="@string/select_class_for_student"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/name_or_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_round_conner_bg"
                android:hint="@string/enter_student_name"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/classes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:prompt="@string/select_class_for_student"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:prompt="@string/choose_month"
                android:textSize="16sp" />


            <Button
                android:id="@+id/submit_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_round_conner_bg"
                android:backgroundTint="@color/colorAccent"
                android:padding="15dp"
                android:text="@string/add_student"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/view_students"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/view_active_students"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/view_classes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/view_classes"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/student_classRL"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/empDataTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="16sp"
                android:textColor="@color/otp_editext_color"
                android:text="@string/noting_found"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>